--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,23 @@
 		<maven.compiler.target>11</maven.compiler.target>
 <!--		<exec.mainClass>il.ac.bgu.cs.bp.bpjs.context.Verifier</exec.mainClass>-->
 	</properties>
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.github.bthink-bgu</groupId>
 			<artifactId>BPjs</artifactId>
 			<version>0.12.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.bThink-BGU</groupId>
+			<artifactId>StateSpaceMapper</artifactId>
+			<version>0.2.15</version>
 		</dependency>
 	</dependencies>
 </project>
